// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds user 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <UsersSelectSearch
          autoFocus={true}
          handleValueChange={[Function]}
          searchUsers={[Function]}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds user 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <UsersSelectSearch
          autoFocus={true}
          handleValueChange={[Function]}
          searchUsers={[Function]}
          selectedUser={
            Object {
              "login": "luke",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`adds user 3`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-large-field"
      >
        <label>
          quality_profiles.search_description
        </label>
        <UsersSelectSearch
          autoFocus={true}
          handleValueChange={[Function]}
          searchUsers={[Function]}
          selectedUser={
            Object {
              "login": "luke",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        type="submit"
      >
        add_verb
      </button>
      <button
        className="button-link"
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;
